# stm32-wasm-runtime-benchmarks

./: .gitignore  README.md  gateway.py  host.py
FFT/: fft_bench.aot  fft_bench.wasm.h  fft_bench_wasm.c
baremetal/: .project
baremetal/bm_fft_f4/: .cproject  .project  bm_fft_f4.launch
baremetal/bm_fft_f7/: .cproject  .project  bm_fft_f7 Debug.launch  bm_fft_f7.ioc
baremetal/bm_toggle/: .cproject  .project  bm_toggle Debug.launch  bm_toggle.launch
baremetal/bm_toggle_f4/: .project  bm_toggle_f4.ioc  bm_toggle_f4.launch
baremetal/bm_toggle_f7/: .cproject  .project  bm_toggle_f7 Debug.launch  bm_toggle_f7.ioc
baremetal/bm_wasm3/: .cproject  .project  bm_wasm3 Debug.launch  bm_wasm3.ioc  bm_wasm3.launch
baremetal/bm_wasm3_f4/: .cproject  .project  bm_wasm3_f4.launch
baremetal/bm_wasm3_f7/: .cproject  .project  bm_wasm3_f7.ioc  bm_wasm3_f7.launch
baremetal/bm_wasm3_fft/: .project
baremetal/bm_wasm3_fft_f4/: .cproject  .project  bm_wasm3_fft_f4 Debug.launch
baremetal/bm_wasm3_fft_f7/: .cproject  .project  bm_wasm3_fft_f7 Debug.launch  bm_wasm3_fft_f7.ioc
benchmarks/: README.md
bm_fft/: .project  bm_fft.ioc  bm_fft.launch
bm_wasm3_fft/: .cproject  bm_wasm3_fft Debug.launch  bm_wasm3_fft.ioc
freertos/frt_fft/: .cproject  frt_fft.ioc  frt_fft.launch
freertos/frt_fft_f4/: .project
freertos/frt_fft_f7/: .cproject  .mxproject  .project  frt_fft_f7 Debug.launch  (+1 more)
frt_fft/: .cproject  .project  frt_fft.ioc  frt_fft.launch
frt_wasm3_fft/: .cproject  .project  frt_wasm3_fft Debug.launch  frt_wasm3_fft.ioc
linux/linux_wasm3_fft/: CMakeLists.txt
linux/linux_wasm3_fft/src/: main.c
test/: .cproject  test.ioc
wasm/: toggle.aot  toggle.wasm  toggle.wat  toggle_aot.h
zephyrproject/z_wasm3_fft_f4/: CMakeLists.txt
zephyrproject/z_wasm3_fft_f4/src/: main.c
zephyrproject/z_wasm3_uart_f7/: CMakeLists.txt  prj.conf
zephyrproject/z_wasm3_uart_f7/src/: main.c
(+1094 files in other folders)
